2003-04-10 garlick
    * Moved ibmasm.dev to ibmrsa.dev and implemented first cut on RSA telnet
      protocol.
    * If no plugs defined in device config, allow the plug names to come from
      the node config lines.

2003-03-31 garlick
    * Adjust power cycle for all devices to wait at least 2 sec between off/on.
      Was 0.7sec on icebox and this seemed to cause initialization problems 
      with SuperMicro P4DPR motherboards running LinuxBIOS.

2002-01-20 garlick
    * Make serial connections non-blocking.

2002-01-20 garlick  
    * Back out beacon change that requires B70 of ice box v3 firmware.
      Now we will work with all versions.
    * Check aliases for bogus nodes
    * Tagged powerman-1-0-16

2002-01-19 garlick
    * Add alias capability in powerman.conf.

2002-01-17 garlick
    * Map plug names to node names on the fly at each subexpression
      interpretation instead of caching mappings in the Interp struct.
    * Major Changes to device specifications (old style no longer supported)
      - "all string" deprecated (use _ALL script variant)
      - various strings shortened
      - begin/end changed to C-style braces
      - query scripts are now named with _all suffixes ("all" semantics were
        previously assumed).
      - new, single-plug (non "all") query scripts added
      - second argument of 'map' can be "%s" to support single-plug query
    * Minor changes to config file (old style causes warnings but still parsed)
      - "tcpwrappers" takes an on|off argument
      - "client listener port" shortened to "port"
      - "begin_nodes", "end_nodes", "begin global", "end_global" statements
        deprecated
    * Support wti-rps10.
    * Added support for setting serial parameters, e.g. "9600,8n1"

2002-01-16 garlick
    * Add SERIAL_DEV device type
    * Begin support for wti-rps10 device (serial)

2002-01-13 garlick
    * Update icebox3 beacon script for B70 of the ice box firmware.

2002-12-30 garlick