@@ -1,8 +1,11 @@
+2003-04-12 garlick
+    * If no plugs defined in device config, allow the plug names to come from
+      the node config lines.
+    * Create new device type "TELNET_DEV" with telnet state machine.
+
 2003-04-10 garlick
     * Moved ibmasm.dev to ibmrsa.dev and implemented first cut on RSA telnet
       protocol.
-    * If no plugs defined in device config, allow the plug names to come from
-      the node config lines.
 
 2003-03-31 garlick
     * Adjust power cycle for all devices to wait at least 2 sec between off/on.
